<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:id="@+id/ScrollView01" 
	android:layout_width="fill_parent" 
    android:layout_height="fill_parent"
    android:background="@drawable/background"
    xmlns:android="http://schemas.android.com/apk/res/android"> 
    <LinearLayout 
     	android:layout_width="fill_parent"
        android:layout_height="wrap_content"
    	android:gravity="center"
        android:orientation="vertical" 
        android:focusable="true"
		android:focusableInTouchMode="true">
<LinearLayout
        	android:layout_width="fill_parent"
            android:layout_height="50dp"
		    android:background="#053E7A"
            android:gravity="center"
            android:orientation="horizontal" >
   
     		<Button  
     	    	style="@style/TitleButton" 
     	    	android:id="@+id/title_left_btn"
     	    	android:text="@string/left_btn_account"/>
    		<TextView 
    	    	style="@style/TitleHeader"
				android:gravity="center" 
				android:id="@+id/maintitle"
				android:text="@string/title_account"/>
			<Button 
		    	style="@style/TitleButton" 
		    	android:id="@+id/title_right_btn"
		    	android:text="@string/right_btn_account"/>
		</LinearLayout>
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/email" />

			<EditText
			    android:id="@+id/email"
			    android:hint="@string/emailhint"
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content" 
			    android:inputType="textEmailAddress">

			</EditText>

			<TextView
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:textColor="@color/black"
			    android:text="@string/passwd" />

			<EditText
			    android:id="@+id/passwd"
			    android:hint="@string/passwdhint"
			    android:layout_width="fill_parent"			    android:layout_height="wrap_content"
			    android:inputType="textPassword" />
<LinearLayout
        	android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:orientation="horizontal" >
			<Button
			    android:id="@+id/setting"
			    android:layout_weight="1"
			    android:layout_width="0dip"
			    android:layout_height="wrap_content"
			    android:text="@string/setting" />
			<Button
			    android:id="@+id/reset"
			    android:layout_weight="1"
			    android:layout_width="0dip"
			    android:layout_height="wrap_content"
			    android:text="@string/reset" />
			</LinearLayout>

		</LinearLayout>
		</ScrollView>
