<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     	android:layout_width="fill_parent"
        android:layout_height="fill_parent"
    	android:gravity="center"
        android:orientation="vertical" 
        android:focusable="true"
        android:background="@drawable/background"
		android:focusableInTouchMode="true">

        <LinearLayout
            android:id="@+id/linearlayout_1"
        	android:background="#053E7A"
        	android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:orientation="horizontal" >
   
     		<Button  
     	    	style="@style/TitleButton" 
     	    	android:id="@+id/title_left_btn"
     	    	android:text="@string/left_btn_inside"/>
    		<TextView 
    	    	style="@style/TitleHeader"
				android:gravity="center" 
				android:id="@+id/maintitle"
				android:text="@string/title_inside"/>
			<Button 
		    	style="@style/TitleButton" 
		    	android:id="@+id/title_right_btn"
		    	android:visibility="invisible"
		    	android:text="@string/right_btn_inside"/>
		</LinearLayout>
		<tw.bot.kaxanet.linway.MyListView
    		android:layout_width="fill_parent"
    		android:layout_height="fill_parent"
    		android:id="@+id/listView"
    />
   	</LinearLayout>