<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background"
    android:fillViewport="true" >

    <LinearLayout 
     	android:layout_width="fill_parent"
        android:layout_height="wrap_content"
    	android:gravity="center"
        android:orientation="vertical" 
        android:focusable="true"
		android:focusableInTouchMode="true">

        <LinearLayout
        	android:layout_width="fill_parent"
            android:layout_height="50dp"
		    android:background="#053E7A"
            android:gravity="center"
            android:orientation="horizontal">
     		<Button  
     	    	style="@style/TitleButton" 
     	    	android:id="@+id/title_left_btn"
     	    	android:text="@string/left_btn_setting"/>
    		<TextView 
    	    	style="@style/TitleHeader"
				android:gravity="center" 
				android:id="@+id/maintitle"
				android:text="@string/title_setting"/>
			<Button 
		    	style="@style/TitleButton" 
		    	android:id="@+id/title_right_btn"
		    	android:text="@string/right_btn_setting"/>
		</LinearLayout>
		
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@drawable/background_round_full"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical" >

<!--             <TextView -->
<!--                 android:id="@+id/textView1" -->
<!--                 android:layout_width="wrap_content" -->
<!--                 android:layout_height="wrap_content" -->
<!--                 android:layout_gravity="left" -->
<!--                 android:paddingLeft="10dip" -->
<!--                 android:paddingTop="10dip" -->
<!--                 android:text="@string/setting_title" -->
<!--                 android:textColor="@color/blue" -->
<!--                 android:textSize="20dip" /> -->

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="20dip"
                android:paddingLeft="20dip"
                android:paddingRight="20dip" >

                <Button
                    android:id="@+id/account_setting"
                    style="@style/SettingButton"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border_rounded_light_gray_top"
                    android:text="@string/account_setting" />

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:background="#000000" />

                <Button
                    android:id="@+id/create_account"
                    style="@style/SettingButton"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border_rounded_light_gray_bottom"
                    android:text="@string/create_account" />
            </LinearLayout>

<!--             <TextView -->
<!--                 android:id="@+id/textView2" -->
<!--                 android:layout_width="wrap_content" -->
<!--                 android:layout_height="wrap_content" -->
<!--                 android:layout_gravity="left" -->
<!--                 android:paddingLeft="10dip" -->
<!--                 android:paddingTop="10dip" -->
<!--                 android:text="@string/about" -->
<!--                 android:textColor="@color/blue" -->
<!--                 android:textSize="20dip" /> -->

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="20dip"
                android:paddingLeft="20dip"
                android:paddingRight="20dip" >

                <Button
                    android:id="@+id/about_app"
                    style="@style/SettingButton"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border_rounded_light_gray_top"
                    android:text="@string/about_app" />

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:background="#000000" />

                <Button
                    android:id="@+id/about_us"
                    style="@style/SettingButton"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border_rounded_light_gray_horizontal"
                    android:text="@string/about_us" />

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:background="#000000" />

                <Button
                    android:id="@+id/contact"
                    style="@style/SettingButton"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border_rounded_light_gray_bottom"
                    android:text="@string/contact" />
            </LinearLayout>
            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="20dip"
                android:layout_gravity="center"
                android:text="@string/copyright" />

        </LinearLayout>

   	</LinearLayout>
</ScrollView>