<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     	android:layout_width="fill_parent"
        android:layout_height="fill_parent"
    	android:gravity="center"
        android:orientation="vertical" 
        android:focusable="true"
        android:background="@drawable/background"
		android:focusableInTouchMode="true">
        <LinearLayout
        	android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:gravity="center"
	        android:background="#053E7A"
            android:orientation="horizontal" >
   			
     		<Button  
     	    	style="@style/TitleButton" 
     	    	android:id="@+id/title_left_btn"
     	    	android:text="@string/left_btn_main"/>
    		<TextView 
    	    	style="@style/TitleHeader"
				android:gravity="center" 
				android:id="@+id/maintitle"
				android:visibility="visible"
				android:text="@string/title_main"/>

    		<Spinner
    		    android:id="@+id/main_title_spinner"
    		    android:layout_width="wrap_content"
    		    android:layout_height="fill_parent"
    		    android:gravity="center" 
    		    android:background="@drawable/myspinner"
    		    android:visibility="gone" />

			<Button 
		    	style="@style/TitleButton" 
		    	android:id="@+id/title_right_btn"
		    	android:text="@string/right_btn_main"/>
		</LinearLayout>
		    <TabHost
        android:id="@+id/main_tab"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" >
            <TabWidget
                android:id="@android:id/tabs"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0" >
            </TabWidget>
            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" >
                <tw.bot.kaxanet.linway.MyListView
    		android:layout_width="fill_parent"
    		android:layout_height="fill_parent"
    		android:id="@+id/listView"/>
                <tw.bot.kaxanet.linway.MyListView
    		android:layout_width="fill_parent"
    		android:layout_height="fill_parent"
    		android:id="@+id/listView1"/>
            </FrameLayout>
        </LinearLayout>
    </TabHost>
<!-- 		<tw.bot.kaxanet.MyListView -->
<!--     		android:layout_width="fill_parent" -->
<!--     		android:layout_height="fill_parent" -->
<!--     		android:id="@+id/listView" -->
<!--     /> -->
<!-- 		<ListView -->
<!--         android:cacheColorHint="#000000" -->
<!--     	android:id="@id/android:list" -->
<!--     	android:layout_width="fill_parent" -->
<!--     	android:layout_height="0px" -->
<!--     	android:layout_weight="1"/> -->
   	</LinearLayout>